Add role-based authorization: restrict test run creation to ADMIN role